--- a/Task01/Portfolio.html
+++ b/Task01/Portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpg"href="https://icon-library.com/images/resume-icon/resume-icon-16.jpg">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="Style.css">
 </head>
