Updating the Portfolio

--- a/Task01/Portfolio.html
+++ b/Task01/Portfolio.html
@@ -14,6 +14,9 @@
             <ul>
                 <li><a href="https://github.com/MalakMohameed " target="_blank">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/malak-mohamed-81a343212/" target="_blank">LinkedIn</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -26,9 +29,26 @@
             When not immersed in lines of code or exploring virtual worlds, she enjoys connecting with fellow adventurers for coding and gaming escapades.<br>
              Don't let her caffeine sensitivity fool you; Malak's energy and enthusiasm for technology know no bounds!</p>
     </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills">
+            <ul>
+                <li>Software Development</li>
+                <li>Data Structures</li>
+                <li>Databases</li>
+                <li>Java/JavaFX</li>
+                <li>C/C++</li>
+                <li>Problem Solving</li>
+                <li>HTML-CSS-JS</li>
+                <li>MySQL</li>
+                <li>Operating Systems</li>
+            </ul>
+        </div>
+    </section>
     
-    <section id="portfolio">
-        <h2>Portfolio</h2>
+    <section id="projects">
+        <h2>Porjects</h2>
 
         <div class="project">
             <img src="https://play-lh.googleusercontent.com/yvBPvcI_j9zt1Ygd3f11o9HIYoEeGC2R6x3OLHi_95S6wq5EVhVDTssyh6RZ-PGyoeMR=w240-h480-rw" alt="Project 1">
@@ -51,11 +71,18 @@
         <div class="project">
             <img src="https://cdn-icons-png.freepik.com/512/5726/5726532.png?ga=GA1.1.292024898.1708457399& " alt="Project 4">
             <h3>Project 4</h3>
-            <p>Simplify temperature conversions with this intuitive JavaFX application. Convert between Fahrenheit (°F), Celsius (°C), and Kelvin (°K) effortlessly. <br>Developed as part of my first task at Prodigy InfoTech. Check out the code on GitHub!</p>
+            <p>Dive into the world of numbers with this engaging JavaFX guessing game!<br> Challenge yourself to guess the randomly generated number and test your intuition. Perfect for honing your guessing skills and having fun in your spare time.<br> Developed as an exciting project during my tenure at Prodigy InfoTech. Explore the code on GitHub!</p>
         </div>
 
     </section>
     
+    <section id="resume">
+        <h2>Resume</h2>
+        <form id="Resume-form" action="https://flowcv.com/resume/esu02j7tqp" method="get" target="_blank">
+            <button type="submit">Download My Resume</button>
+        </form>
+    </section>
+
     <section id="contact">
         <h2>Contact Me</h2>
         <form id="contact-form">
@@ -65,6 +92,8 @@
             <button type="submit">Send</button>
         </form>
     </section>
+
+   
 
     <footer>
         <p>&copy; Malak's Portfolio</p>
